Mis-à-jour des pages index.html et tableu_fr.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title>Programmation et Projet Encadré</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   </head>
@@ -11,25 +11,21 @@
   <section class="section">
     <div class="container">
       <h1 class="title">
-        Hello World
+        Programmation et Projet Encadré
       </h1>
       <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
+        Le projet pour le cours de<strong>PPE1</strong> pour création d'un page web avec GitHub Pages.
       </p>
     </div>
   </section>
+  <section class="section">
+    <div class="container">
+        <h2 class="title">
+            Bonjour! C'est une page web pour exposer les exercices fait pour le cours de PPE1.
+        </h2>
+        <p>Dans ce cours, nous avons créé un script shell pour analyser un corpus des liens. Le table suivant est créé par un script shell. C'est une liste des liens avec le code HTTP reçu du server, encodage de la page et nombre des mots.</p>
+        <a href="tableau-fr.html" class="button is-primary">Cliquez ici pour la page avec le tableu</a>
+    </div>
+  </section>
   </body>
-</html>
-
-<html>
-<head>
-<meta charset="UTF-8" />
-<title>Programmation et Projet encadré</title>
-</head>
-
-<body>
-<p>Page initiale du PPE.</p>
-<a href="tableau-fr.html">Cliquez ici pour la page avec le tableu</a>
-</body>
-
 </html>
