--- a/tableau-fr.html
+++ b/tableau-fr.html
@@ -8,9 +8,18 @@
 		<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	</head>
 	<body>
+		<section class="hero is-danger">
+			<div class="hero-body">
+				<div class="container">
+					<h1 class="title">Programmation et Projet Encadré</h1>
+				</div>
+			</div>
+		</section>
 		<section class="section">
 			<div class="container">
-				<h1>Analyse des URLs</h1>
+				<h1 class="title">
+					Analyse des URLs
+				</h1>
 				<table class="table">
 					<thead>
 						<tr>
@@ -96,5 +105,6 @@
 				</table>
 			</div>
 		</section>
+		<a href="index.html" class="button is-primary">Cliquez ici pour retournet à la page d'acceuil.</a>
 	</body>
 </html>
